components and routing;

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,3 +1,58 @@
-<p>
-  footer works!
-</p>
+<footer class="text-center">
+  <div class="footer-above">
+    <div class="container">
+      <div class="row">
+        <div class="footer-col col-md-4">
+          <h3>Contact Information</h3>
+          <p>
+            Carlisle, PA 17013
+            <br> (717) 218-3818
+            <br> grow.tell.slp@gmail.com
+          </p>
+        </div>
+        <div class="footer-col col-md-4">
+          <h3>Follow Grow & Tell</h3>
+          <ul class="list-inline">
+            <li>
+              <a target="_blank" href="https://www.facebook.com/grow.and.tellSLP/?pnref=lhc" class="btn-social btn-outline">
+                <i class="fa fa-fw fa-facebook"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="btn-social btn-outline">
+                <i class="fa fa-fw fa-google-plus"></i>
+              </a>
+            </li>
+            <li>
+              <a target="_blank" href="https://www.linkedin.com/in/jessica-over-9a697011b?trk=nav_responsive_tab_profile" class="btn-social btn-outline">
+                <i class="fa fa-fw fa-linkedin"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-col col-md-4">
+          <h3>Pricing</h3>
+          <p>Contact us for 2018 Pricing.
+          </p>
+          <a href="#header" class="back-to-top">Go back to top of page</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer-below">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          Copyright &copy; Grow & Tell SLP 2016
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+
+<!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
+<div class="scroll-top page-scroll hidden-sm hidden-xs hidden-lg hidden-md">
+  <a class="btn btn-primary" href="#page-top">
+    <i class="fa fa-chevron-up"></i>
+  </a>
+</div>
