--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,38 +1,55 @@
-.logo-icon {
-    height: 54px;
-    width: auto;
-    float: left;
-    margin: auto 10px;
-}
-
-.slp-lbl {
-    color: #fff;
-    float: left;
-    font-size: 16px;
-    margin: 16px 0px 20px 0px;
-}
-
-.navbar-header {
-    width: auto;
-}
-
-.navbar-brand {
-    font-size: 40px;
-}
-
-.navbar {
-    clear: both;
-}
-
-.intro-lead-in {
-    float: left;
-    position: absolute;
-    left: 180px;
-    top: 100px;
-    font-size: 24px !important;
-    color: #7CFC00;
-}
-
-.intro-heading {
-    color: #7CFC00;
+// .logo-icon {
+//     height: 54px;
+//     width: auto;
+//     float: left;
+//     margin: auto 10px;
+// }
+// .slp-lbl {
+//     color: #fff;
+//     float: left;
+//     font-size: 16px;
+//     margin: 16px 0px 20px 0px;
+// }
+// .navbar-header {
+//     width: auto;
+// }
+// .navbar-brand {
+//     font-size: 40px;
+// }
+// .navbar {
+//     clear: both;
+// }
+// .intro-lead-in {
+//     float: left;
+//     position: absolute;
+//     left: 180px;
+//     top: 100px;
+//     font-size: 24px !important;
+//     color: #7CFC00;
+// }
+// .intro-heading {
+//     color: #7CFC00;
+// }
+@import '~@angular/material/_theming';
+@import '../../../common';
+#header {
+    @include silver-gradient();
+    min-height: 64px;
+    min-width: 680px;
+    box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .2), 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 3;
+    #logo {
+        height: 48px;
+        cursor: pointer;
+    }
+    #summer-league {
+        height: 100%;
+        position: absolute;
+        right: 0;
+        cursor: pointer;
+    }
 }
