--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<gt-header></gt-header>
+<!-- <gt-header></gt-header> -->
 <router-outlet></router-outlet>
-<gt-footer></gt-footer>
+<!-- <gt-footer></gt-footer> -->
