--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top">
+<!-- <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
 
         <div class="navbar-header page-scroll">
@@ -34,4 +34,9 @@
             <a href="#services" class="page-scroll btn btn-xl font-effect-outline">Tell Me More</a>
         </div>
     </div>
-</header>
+</header> -->
+
+<mat-toolbar id="header" color="primary" class="mat-elevation-z6">
+    <img id="logo" src="assets/CCC-letterhead.png" routerLink="/">
+    <img id="summer-league" src="assets/summer-league-logo.png" routerLink="/summer-league">
+</mat-toolbar>
