--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,9 @@
+@import '~@angular/material/_theming';
+@import 'common';
+body {
+    margin: 0;
+}
+
 header {
     background-image: url('assets/header-bg.jpg');
     background-repeat: none;
