--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,3 @@
-<gt-container>
-    <!-- <gt-mission></gt-mission> -->
+<gt-container [hasWallpaper]="true">
+    <gt-mission class="card"></gt-mission>
 </gt-container>
