--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -37,6 +37,6 @@
 </header> -->
 
 <mat-toolbar id="header" color="primary" class="mat-elevation-z6">
-    <img id="logo" src="assets/CCC-letterhead.png" routerLink="/">
+    <img id="logo" src="assets/logo.png" routerLink="/">
     <img id="summer-league" src="assets/summer-league-logo.png" routerLink="/summer-league">
 </mat-toolbar>
