--- a/src/app/shared/mission/mission.component.html
+++ b/src/app/shared/mission/mission.component.html
@@ -16,7 +16,7 @@
       </p>
     </div>
   </div>
-  <div class="row" style="padding: 20px 10px;">
+  <!-- <div class="row" style="padding: 20px 10px;">
     <div class="col-sm-4">
       <img class="row-img" src="assets/talking pic.jpg" />
     </div>
@@ -26,5 +26,5 @@
     <div class="col-sm-4">
       <img class="row-img" src="assets/speech therapy pic.jpg" />
     </div>
-  </div>
+  </div> -->
 </section>
