--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -33,7 +33,7 @@
 @import '~@angular/material/_theming';
 @import '../../../common';
 #header {
-    @include silver-gradient();
+    @include black-gradient();
     min-height: 64px;
     min-width: 680px;
     box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .2), 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12);
