--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,4 +1,7 @@
 <div id="navbar">
   <!-- <img class="summer-league-logo" src="assets/summer-league-logo.png" routerLink="/summer-league"> -->
-  <a class="link" routerLink="/summer-league">Summer League</a>
+  <a class="link" routerLink="/about">About Us</a>
+  <a class="link" routerLink="/contact">Contact Us</a>
+  <a class="link" routerLink="/services">Services</a>
+  <a class="link" routerLink="/blog">Blog</a>
 </div>
