fonts; social icons; main menu;

--- a/src/app/shared/container/container.component.html
+++ b/src/app/shared/container/container.component.html
@@ -1,5 +1,5 @@
 <gt-header></gt-header>
-<gt-navbar></gt-navbar>
+<!-- <gt-navbar></gt-navbar> -->
 <gt-sidenav [style.height.px]="sidenavHeight"></gt-sidenav>
 <div id="content" [style.min-height.px]="windowHeight" [style.min-width.px]="windowWidth">
   <ng-content></ng-content>
