--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -37,6 +37,7 @@
 </header> -->
 
 <mat-toolbar id="header" color="primary" class="mat-elevation-z6">
-    <img id="logo" src="assets/logo.png" routerLink="/">
-    <img id="summer-league" src="assets/summer-league-logo.png" routerLink="/summer-league">
+  <img id="logo" src="assets/logo.png" routerLink="/">
+  <a id="banner" class="font-effect-emboss" routerLink="/">Grow & Tell S.L.P.</a>
+  <gt-social-icons></gt-social-icons>
 </mat-toolbar>
