--- a/src/app/shared/mission/mission.component.html
+++ b/src/app/shared/mission/mission.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-lg-12 text-center">
       <h2 class="section-heading">Our Mission</h2>
-      <p class="section-subheading text-muted  mission-statement font-effect-emboss">
+      <p class="section-subheading text-muted  mission-statement">
         Grow & Tell’s mission is to provide Speech-Language Pathology services, including the prevention, screening, assessment,
         treatment, and counseling/collaboration of communication disorders to clients in infancy through adolescents. Grow
         & Tell aims to deliver individualized, evidenced based and developmentally supported services to clients, while also
