--- a/src/app/shared/mission/mission.component.scss
+++ b/src/app/shared/mission/mission.component.scss
@@ -1,6 +1,7 @@
 .mission {
     .mission-statement {
         font-size: 18px;
-        color: #000;
+        color: #fff;
+        font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, cursive;
     }
 }
