--- a/src/app/shared/sidenav/sidenav.component.html
+++ b/src/app/shared/sidenav/sidenav.component.html
@@ -1,8 +1,25 @@
 <nav class="sidenav">
   <!-- <img class="summer-league-logo" src="assets/summer-league-logo.png" routerLink="/summer-league"> -->
-  <a class="link" href="/assets/pdf/summer-league-signup.pdf" target="_blank">
+  <!-- <a class="link" href="/assets/pdf/summer-league-signup.pdf" target="_blank">
     <mat-icon>picture_as_pdf</mat-icon>
     <span class="label">Summer League Sign-up Sheet</span>
+  </a> -->
+  <a class="link" routerLink="/about">
+    <mat-icon>info</mat-icon>
+    <span class="label">About Us</span>
   </a>
-  <img class="logo" src="assets/CCC.png">
+  <a class="link" routerLink="/contact">
+    <mat-icon>contact_support</mat-icon>
+    <span class="label">Contact Us</span>
+  </a>
+  <a class="link" routerLink="/services">
+    <mat-icon>child_caret</mat-icon>
+    <span class="label">Services</span>
+  </a>
+  <a class="link" routerLink="/blog">
+    <mat-icon>forum</mat-icon>
+    <span class="label">Blog</span>
+  </a>
+  <!-- <img class="logo" src="assets/logo.jpg" routerLink="/"> -->
+  <gt-social-icons></gt-social-icons>
 </nav>
