--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,5 @@
 <gt-container [hasWallpaper]="true">
     <gt-mission class="card"></gt-mission>
+    <div class="intro-heading font-effect-3d-float">Welcome!</div>
+    <!-- <a class="page-scroll btn btn-xl font-effect-outline" href="/services">Tell Me More</a> -->
 </gt-container>
