--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -37,7 +37,8 @@
 </header> -->
 
 <mat-toolbar id="header" color="primary" class="mat-elevation-z6">
-  <img id="logo" src="assets/logo.png" routerLink="/">
-  <a id="banner" class="font-effect-emboss" routerLink="/">Grow & Tell S.L.P.</a>
-  <gt-social-icons></gt-social-icons>
+  <!-- <img id="logo" src="assets/logo.png" routerLink="/"> -->
+  <!-- <a id="banner" class="font-effect-emboss" routerLink="/">Grow & Tell S.L.P.</a> -->
+  <!-- <gt-social-icons></gt-social-icons> -->
+  <div _ngcontent-stt-3="" class="intro-lead-in font-effect-emboss">"Growing Confidence in Communication!"</div>
 </mat-toolbar>
