--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -32,35 +32,42 @@
 // }
 @import '~@angular/material/_theming';
 @import '../../../common';
-
 #header {
-  @include black-gradient();
-  min-height: 64px;
-  min-width: 680px;
-  box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .2), 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12);
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 3;
-
-  #logo {
-    height: 48px;
-    cursor: pointer;
-  }
-
-  #banner {
-    padding: 0 30px;
-    color: #7CFC00;
-    font-family: "Poiret One", "Helvetica Neue", Helvetica, Arial, cursive;
-    font-size: 22px;
-    text-decoration: none;
-  }
-
-  gt-social-icons {
-    height: 100%;
+    @include black-gradient();
+    min-height: 64px;
+    min-width: 680px;
+    box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .2), 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
     position: absolute;
-    right: 10px;
-    cursor: pointer;
-  }
+    left: 120px;
+    .intro-lead-in {
+        font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-style: italic;
+        line-height: 40px;
+        margin-left: 20px;
+        float: right;
+        font-size: 20px;
+        color: #7cfc00;
+    }
+    #logo {
+        height: 48px;
+        cursor: pointer;
+    }
+    #banner {
+        padding: 0 30px;
+        color: #7CFC00;
+        font-family: "Poiret One", "Helvetica Neue", Helvetica, Arial, cursive;
+        font-size: 22px;
+        text-decoration: none;
+    }
+    gt-social-icons {
+        height: 100%;
+        position: absolute;
+        right: 10px;
+        cursor: pointer;
+    }
 }
