--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -4,3 +4,42 @@ gt-mission {
     top: 60px;
     left: 80px;
 }
+
+.intro-heading {
+    font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    text-transform: uppercase;
+    font-weight: 700;
+    line-height: 75px;
+    margin-bottom: 50px;
+    color: #7cfc00;
+    float: left;
+    position: absolute;
+    left: 180px;
+    top: 100px;
+    font-size: 24px !important;
+    color: #7cfc00;
+}
+
+.btn-xl {
+    background-color: rgb(124, 252, 0);
+    font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 18px;
+    border-color: rgb(124, 252, 0);
+    border-radius: 3px;
+    padding: 20px 40px;
+    display: inline-block;
+    margin-bottom: 0px;
+    line-height: 1.42857;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    touch-action: manipulation;
+    cursor: pointer;
+    user-select: none;
+    background-image: none;
+    border-width: 1px;
+    border-style: solid;
+    border-image: initial;
+}
