--- a/src/app/shared/mission/mission.component.scss
+++ b/src/app/shared/mission/mission.component.scss
@@ -1,7 +1,11 @@
 .mission {
-    .mission-statement {
-        font-size: 18px;
-        color: #fff;
-        font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, cursive;
-    }
+  .section-heading {
+    color: silver;
+  }
+
+  .mission-statement {
+    font-size: 16px;
+    color: #fff;
+    font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, cursive;
+  }
 }
