--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,26 +1,46 @@
-gt-mission {
-    height: 520px;
-    width: 800px;
-    top: 60px;
-    left: 80px;
-}
+@import '~@angular/material/_theming';
+@import '../../common';
 
-.intro-heading {
+#inner-content {
+  height: 100%;
+  width: 100%;
+  min-height: 600px;
+  min-width: 800px;
+  position: absolute;
+  z-index: 2;
+
+  gt-mission {
+    height: 400px;
+    width: 800px;
+  }
+
+  .intro-lead-in {
+    font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-style: italic;
+    float: right;
+    font-size: 22px;
+    color: #000;
+    position: absolute;
+    left: 20px;
+    top: 20px;
+  }
+
+  .intro-heading {
     font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-transform: uppercase;
     font-weight: 700;
     line-height: 75px;
     margin-bottom: 50px;
-    color: #7cfc00;
-    float: left;
+    font-size: 48px !important;
+    color: silver;
+    color: $primary-color;
     position: absolute;
-    left: 180px;
-    top: 100px;
-    font-size: 24px !important;
-    color: #7cfc00;
-}
+    top: 80px;
+  }
 
-.btn-xl {
+  .btn-xl {
+    @include mat-elevation(8);
+    text-decoration: none;
     background-color: rgb(124, 252, 0);
     font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-transform: uppercase;
@@ -42,4 +62,11 @@ gt-mission {
     border-width: 1px;
     border-style: solid;
     border-image: initial;
+    position: absolute;
+    bottom: 50px;
+  }
+
+  .btn-xl:hover {
+    background: silver;
+  }
 }
