container inner content;

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -31,7 +31,7 @@
     font-weight: 700;
     line-height: 75px;
     margin-bottom: 50px;
-    font-size: 48px !important;
+    font-size: 64px;
     color: silver;
     color: $primary-color;
     position: absolute;
