--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,3 +1,4 @@
 <gt-container>
-
+    <div id="inner-content" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20px">
+    </div>
 </gt-container>
