--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,5 @@
 <gt-container>
-    <gt-email></gt-email>
+    <div id="inner-content" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20px">
+        <gt-email></gt-email>
+    </div>
 </gt-container>
