--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<gt-container>
+<gt-container [hasWallpaper]="false">
   <section id="team" class="bg-light-gray">
     <div class="container">
       <div class="row">
