--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -37,25 +37,28 @@
 </header> -->
 
 <mat-toolbar id="header" color="primary" class="mat-elevation-z6" [style.width.px]="windowWidth">
-  <!-- <img id="logo" src="assets/logo.png" routerLink="/"> -->
-  <!-- <a id="banner" class="font-effect-emboss" routerLink="/">Grow & Tell S.L.P.</a> -->
-  <!-- <gt-social-icons></gt-social-icons> -->
+    <!-- <img id="logo" src="assets/logo.png" routerLink="/"> -->
+    <!-- <a id="banner" class="font-effect-emboss" routerLink="/">Grow & Tell S.L.P.</a> -->
+    <!-- <gt-social-icons></gt-social-icons> -->
 
-  <a class="navbar-brand page-scroll" routerLink="/">Grow &amp; Tell SLP, LLC</a>
-  <p class="slp-lbl font-effect-emboss">Speech &amp; Language Pathology</p>
-  <!-- <div class="intro-lead-in font-effect-emboss">"Growing Confidence in Communication!"</div> -->
-  <div id="header-links">
-    <a class="link" routerLink="/about">
-      <mat-icon>info</mat-icon>
-    </a>
-    <a class="link" routerLink="/services">
-      <mat-icon>child_caret</mat-icon>
-    </a>
-    <a class="link" routerLink="/contact">
-      <mat-icon>contact_support</mat-icon>
-    </a>
-    <a class="link" routerLink="/blog">
-      <mat-icon>forum</mat-icon>
-    </a>
-  </div>
+    <a class="navbar-brand page-scroll" routerLink="/">Grow &amp; Tell SLP, LLC</a>
+    <p class="slp-lbl font-effect-emboss">Speech &amp; Language Pathology</p>
+    <!-- <div class="intro-lead-in font-effect-emboss">"Growing Confidence in Communication!"</div> -->
+    <div id="header-links">
+        <a class="link" routerLink="/home">
+            <mat-icon>home</mat-icon>
+        </a>
+        <a class="link" routerLink="/about">
+            <mat-icon>info</mat-icon>
+        </a>
+        <a class="link" routerLink="/services">
+            <mat-icon>child_caret</mat-icon>
+        </a>
+        <a class="link" routerLink="/contact">
+            <mat-icon>contact_support</mat-icon>
+        </a>
+        <a class="link" routerLink="/blog">
+            <mat-icon>forum</mat-icon>
+        </a>
+    </div>
 </mat-toolbar>
