--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,7 +21,7 @@ header .intro-text {
 }
 
 header .intro-text .intro-lead-in {
-    font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-style: italic;
     font-size: 22px;
     line-height: 22px;
@@ -61,7 +61,7 @@ header .intro-text .intro-heading {
 
 body {
     overflow: hidden;
-    font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .text-muted {
