--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,4 +1,4 @@
-<gt-container>
+<gt-container [hasWallpaper]="false">
     <div id="inner-content" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20px">
     </div>
 </gt-container>
