--- a/src/app/services/services.component.scss
+++ b/src/app/services/services.component.scss
@@ -19,7 +19,7 @@ ul {
 
 .services-list p {
     vertical-align: middle;
-    font-family: 'Roboto', serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     color: #000;
     font-weight: bold;
@@ -27,7 +27,7 @@ ul {
 
 .services-list p {
     vertical-align: middle;
-    font-family: 'Roboto', serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     color: #000;
 }
