--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,28 +4,27 @@
 
     <!-- TEAM -->
     <div id="team">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-heading">The Grow & Tell Team</h2>
-      </div>
+      <h2 class="section-heading font-effect-shadow-multiple">The Grow & Tell Team</h2>
 
       <gt-team-member [name]="jess.name" [imageSrc]="jess.imageSrc" [title]="jess.title" [description]="jess.description"
-        [facebookHref]="jess.facebookHref" [linkedInHref]="jess.linkedInHref"></gt-team-member>
+        [facebookHref]="jess.facebookHref" [linkedInHref]="jess.linkedInHref" [testimonials]="jess.testimonials"></gt-team-member>
 
       <gt-team-member [name]="julie.name" [imageSrc]="julie.imageSrc" [title]="julie.title" [description]="julie.description"
-        [facebookHref]="julie.facebookHref" [linkedInHref]="julie.linkedInHref"></gt-team-member>
+        [facebookHref]="julie.facebookHref" [linkedInHref]="julie.linkedInHref" [testimonials]="julie.testimonials"></gt-team-member>
 
-      <div class="team-member">
+      <!-- <div class="team-member">
         <img src="assets/ashaweb-71_600.jpg" class="img-responsive img-circle" alt="">
         <h4>American Speech-Language-Hearing Association</h4>
         <p class="text-muted">Certified Members</p>
         <ul class="list-inline social-buttons">
         </ul>
-      </div>
+      </div> -->
+
     </div>
     <!-- END TEAM -->
 
     <!-- PARTNERSHIPS -->
-    <aside class="clients">
+    <!-- <aside class="clients">
       <div class="container">
         <div class="row">
           <div class="col-md-3 col-sm-6">
@@ -50,7 +49,7 @@
           </div>
         </div>
       </div>
-    </aside>
+    </aside> -->
     <!-- END PARTNERSHIPS -->
 
   </div>
