--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,183 +1,170 @@
 <gt-container [hasWallpaper]="false" backgroundImage="assets/both.jpg">
 
   <div id="inner-content">
-    <div id="services">
-      <h2 class="section-heading">Services</h2>
 
-      <img class="graphic" src="assets/growing_better_skills.JPG">
+    <h2 class="section-heading font-effect-shadow-multiple">Services</h2>
 
-      <div class="row text-center">
+    <div class="text-center">
 
-        <div class="step">
-          <button mat-fab>1</button>
-          <h4>Screen</h4>
-          <p class="text-muted">
-            We screen individuals for possible communication, hearing, and/or feeding and swallowing disorders,
-            as
-            to aid in our ability
-            to make appropriate referrals and recommendations. We use standardized and non-standardized screening
-            tools
-            and procedures that are evidence based and supported by typical developmental research.
-          </p>
-        </div>
-
-        <div class="step">
-          <button mat-fab>2</button>
-          <h4>Diagnose</h4>
-          <p class="text-muted">
-            We aim to complete comprehensive evaluations for differential diagnosis of communication and
-            swallowing
-            disorders, utilizing
-            the ICF framework of evaluating body function, structure, activity and participation, within the
-            context of
-            environmental and personal factors. We use standardized tools to compare individuals to peers, review
-            medical
-            records to determine relevant health, medical and pharmacological information, interview family
-            members
-            to
-            obtain a case history and identify specific concerns, conduct behavioral observations to determine an
-            individual's
-            skills in a natural context, formulate impressions to develop a plan of treatment, and discuss
-            eligibility
-            criteria for treatment.
-          </p>
-        </div>
-        <div class="step">
-          <button mat-fab>3</button>
-          <h4>Treat</h4>
-          <p class="text-muted">
-            We deliver culturally and linguistically appropriate services aimed at optimizing an individual's
-            ability to communicate.
-            From the comprehensive assessment we will develop and implement a treatment plan to address the
-            presenting
-            symptoms and individual/familial concerns related to the communication and/or swallowing disorder.
-            Treatment
-            establishes new and/or remediates impaired skills and abilities.
-            <br>
-            <i> (from the
-              <a target="_blank" href="http://www.asha.org/">ASHA</a> website)</i>
-          </p>
-        </div>
-
+      <div class="step">
+        <button mat-fab>1</button>
+        <h4 class="font-effect-emboss">Screen</h4>
+        <p>
+          We screen individuals for possible communication, hearing, and/or feeding and swallowing disorders,
+          as
+          to aid in our ability
+          to make appropriate referrals and recommendations. We use standardized and non-standardized screening
+          tools
+          and procedures that are evidence based and supported by typical developmental research.
+        </p>
       </div>
 
-      <mat-card class="card-list">
-        <div class="row">
-          <h3 class="text-muted our-services-heading font-effect-shadow-multiple">
-            Grow & Tell services the following individuals:
-          </h3>
-        </div>
-        <div class="our-services font-effect-shadow-multiple">
-          <div class="row services-list services-list-population">
-            <div class="col-sm-3">
-              <p>Infants</p>
-            </div>
-            <div class="col-sm-3">
-              <p>Toddlers</p>
-            </div>
-            <div class="col-sm-3">
-              <p>School-age</p>
-            </div>
-            <div class="col-sm-3">
-              <p>Adolescents</p>
-            </div>
-          </div>
-        </div>
-      </mat-card>
+      <div class="step">
+        <button mat-fab>2</button>
+        <h4 class="font-effect-emboss">Diagnose</h4>
+        <p>
+          We aim to complete comprehensive evaluations for differential diagnosis of communication and
+          swallowing
+          disorders, utilizing
+          the ICF framework of evaluating body function, structure, activity and participation, within the
+          context of
+          environmental and personal factors. We use standardized tools to compare individuals to peers, review
+          medical
+          records to determine relevant health, medical and pharmacological information, interview family
+          members
+          to
+          obtain a case history and identify specific concerns, conduct behavioral observations to determine an
+          individual's
+          skills in a natural context, formulate impressions to develop a plan of treatment, and discuss
+          eligibility
+          criteria for treatment.
+        </p>
+      </div>
 
-      <mat-card class="card-list">
-        <div class="row">
-          <h3 class="text-muted our-services-heading font-effect-shadow-multiple">
-            Disorders include:
-          </h3>
-        </div>
-
-        <div class="our-services font-effect-shadow-multiple">
-          <div class="row services-list services-list-disabilities">
-            <div class="col-sm-4">
-              <p>Articulation & Phonological Processes (Speech Sound Disorders)</p>
-            </div>
-            <div class="col-sm-4">
-              <p>Receptive Language (Comprehension)</p>
-            </div>
-            <div class="col-sm-4">
-              <p>Expressive Language (Phonology, Morphology, Syntax, Semantics)</p>
-            </div>
-          </div>
-          <div class="row services-list services-list-disabilities">
-            <div class="col-sm-4">
-              <p>Pragmatic Language (Social Skills)</p>
-            </div>
-            <div class="col-sm-4">
-              <p>Literacy (Reading, Writing, Spelling)</p>
-            </div>
-            <div class="col-sm-4">
-              <p>Fluency (Stuttering)</p>
-            </div>
-          </div>
-          <div class="row services-list services-list-disabilities">
-            <div class="col-sm-4">
-              <p>Voice</p>
-            </div>
-            <div class="col-sm-4">
-              <p>Cognition (Attention, Memory, Sequencing, Problem Solving, Executive Functioning)</p>
-            </div>
-            <div class="col-sm-4">
-              <p>Prelinguistic Communication (Joint Attention, Intentionality, Communicative Signaling)</p>
-            </div>
-          </div>
-          <div class="row services-list services-list-disabilities">
-            <div class="col-sm-4">
-              <p>Paralinguistic Communication (Volume, Intonation, Rate)</p>
-            </div>
-            <div class="col-sm-4">
-              <p>Limited Feeding/Swallowing</p>
-            </div>
-            <div class="col-sm-4">
-              <p></p>
-            </div>
-          </div>
-        </div>
-      </mat-card>
-
-      <mat-card class="card-list">
-        <div class="row">
-          <h3 class="text-muted our-services-heading font-effect-shadow-multiple">
-            Grow & Tell delivers services to individuals with communication disorders secondary to:
-          </h3>
-        </div>
-        <div class="our-services font-effect-shadow-multiple">
-          <div class="row services-list services-list-disorders">
-            <div class="col-sm-3">
-              <p>Autism Spectrum Disorders (ASD)</p>
-            </div>
-            <div class="col-sm-3">
-              <p>Intellectual Disability (ID)</p>
-            </div>
-            <div class="col-sm-3">
-              <p>Deaf/Hard of Hearing</p>
-            </div>
-            <div class="col-sm-3">
-              <p>Learning Disabilities</p>
-            </div>
-          </div>
-          <div class="row services-list services-list-disorders">
-            <div class="col-sm-3">
-              <p>Cleft Palate/Lip</p>
-            </div>
-            <div class="col-sm-3">
-              <p>Traumatic Brain Injury (TBI)</p>
-            </div>
-            <div class="col-sm-3">
-              <p>Developmental Apraxia of Speech</p>
-            </div>
-            <div class="col-sm-3">
-              <p>And more…</p>
-            </div>
-          </div>
-        </div>
-      </mat-card>
+      <div class="step">
+        <button mat-fab>3</button>
+        <h4 class="font-effect-emboss">Treat</h4>
+        <p>
+          We deliver culturally and linguistically appropriate services aimed at optimizing an individual's
+          ability to communicate.
+          From the comprehensive assessment we will develop and implement a treatment plan to address the
+          presenting
+          symptoms and individual/familial concerns related to the communication and/or swallowing disorder.
+          Treatment
+          establishes new and/or remediates impaired skills and abilities.
+          <br>
+          <i> (from the
+            <a target="_blank" href="http://www.asha.org/">ASHA website</a>)</i>
+        </p>
+      </div>
 
     </div>
+
+    <img class="graphic" src="assets/growing_better_skills.JPG">
+
+    <mat-card class="card-list">
+      <h3>
+        Grow & Tell services the following individuals:
+      </h3>
+      <div class="row">
+        <div class="col-sm-3">
+          <p>Infants</p>
+        </div>
+        <div class="col-sm-3">
+          <p>Toddlers</p>
+        </div>
+        <div class="col-sm-3">
+          <p>School-age</p>
+        </div>
+        <div class="col-sm-3">
+          <p>Adolescents</p>
+        </div>
+      </div>
+    </mat-card>
+
+    <mat-card class="card-list middle">
+      <h3>
+        Disorders include:
+      </h3>
+      <div class="row">
+        <div class="col-sm-4">
+          <p>Articulation & Phonological Processes (Speech Sound Disorders)</p>
+        </div>
+        <div class="col-sm-4">
+          <p>Receptive Language (Comprehension)</p>
+        </div>
+        <div class="col-sm-4">
+          <p>Expressive Language (Phonology, Morphology, Syntax, Semantics)</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-4">
+          <p>Pragmatic Language (Social Skills)</p>
+        </div>
+        <div class="col-sm-4">
+          <p>Literacy (Reading, Writing, Spelling)</p>
+        </div>
+        <div class="col-sm-4">
+          <p>Fluency (Stuttering)</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-4">
+          <p>Voice</p>
+        </div>
+        <div class="col-sm-4">
+          <p>Cognition (Attention, Memory, Sequencing, Problem Solving, Executive Functioning)</p>
+        </div>
+        <div class="col-sm-4">
+          <p>Prelinguistic Communication (Joint Attention, Intentionality, Communicative Signaling)</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-4">
+          <p>Paralinguistic Communication (Volume, Intonation, Rate)</p>
+        </div>
+        <div class="col-sm-4">
+          <p>Limited Feeding/Swallowing</p>
+        </div>
+        <div class="col-sm-4">
+          <p></p>
+        </div>
+      </div>
+    </mat-card>
+
+    <mat-card class="card-list">
+      <h3>
+        Grow & Tell delivers services to individuals with communication disorders secondary to:
+      </h3>
+      <div class="row">
+        <div class="col-sm-3">
+          <p>Autism Spectrum Disorders (ASD)</p>
+        </div>
+        <div class="col-sm-3">
+          <p>Intellectual Disability (ID)</p>
+        </div>
+        <div class="col-sm-3">
+          <p>Deaf/Hard of Hearing</p>
+        </div>
+        <div class="col-sm-3">
+          <p>Learning Disabilities</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-3">
+          <p>Cleft Palate/Lip</p>
+        </div>
+        <div class="col-sm-3">
+          <p>Traumatic Brain Injury (TBI)</p>
+        </div>
+        <div class="col-sm-3">
+          <p>Developmental Apraxia of Speech</p>
+        </div>
+        <div class="col-sm-3">
+          <p>And more…</p>
+        </div>
+      </div>
+    </mat-card>
+
   </div>
 </gt-container>
