--- a/src/app/shared/email/email.component.html
+++ b/src/app/shared/email/email.component.html
@@ -1,4 +1,4 @@
-<section id="email-us">
+<div id="email-us">
   <form ngNoForm action="http://formspree.io/grow.tell.slp@gmail.com" method="POST">
     <h1>Email Grow & Tell!</h1>
     <input placeholder="Name" type="text" name="sender" value="" required>
@@ -10,7 +10,7 @@
     </div>
     <button>Send</button>
   </form>
-</section>
+</div>
 
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <link href='http://fonts.googleapis.com/css?family=Roboto:400' rel='stylesheet' type='text/css'>
