--- a/src/app/shared/mission/mission.component.html
+++ b/src/app/shared/mission/mission.component.html
@@ -3,28 +3,24 @@
     <div class="col-lg-12 text-center">
       <h2 class="section-heading">Our Mission</h2>
       <p class="section-subheading text-muted  mission-statement">
-        Grow & Tell’s mission is to provide Speech-Language Pathology services, including the prevention, screening, assessment,
-        treatment, and counseling/collaboration of communication disorders to clients in infancy through adolescents. Grow
-        & Tell aims to deliver individualized, evidenced based and developmentally supported services to clients, while also
-        providing support to their families. We believe familial support and involvement through the therapy process is essential
-        for carryover and generalization of skills from the therapy setting to everyday routines and activities. Grow & Tell
-        involves the parents/family in the therapy process by teaching them how to implement strategies that target individualized
-        goals. Grow & Tell delivers services at an office location, but also within the client’s home, determined on an individual
-        basis and dependent on the age and disability of the client. Therapy services are delivered through a play based
-        approach (infants & toddlers), and/or a traditional drill-based approach (school age & adolescents), depending on
+        Grow & Tell’s mission is to provide Speech-Language Pathology services, including the prevention, screening,
+        assessment,
+        treatment, and counseling/collaboration of communication disorders to clients in infancy through adolescents.
+        Grow
+        & Tell aims to deliver individualized, evidenced based and developmentally supported services to clients, while
+        also
+        providing support to their families. We believe familial support and involvement through the therapy process is
+        essential
+        for carryover and generalization of skills from the therapy setting to everyday routines and activities. Grow &
+        Tell
+        involves the parents/family in the therapy process by teaching them how to implement strategies that target
+        individualized
+        goals. Grow & Tell is located within Carlisle Pediatric Associates in Carlisle, PA. Therapy services are
+        delivered through a play based
+        approach (infants & toddlers), and/or a traditional drill-based approach (school age & adolescents), depending
+        on
         the age and needs of the client.
       </p>
     </div>
   </div>
-  <!-- <div class="row" style="padding: 20px 10px;">
-    <div class="col-sm-4">
-      <img class="row-img" src="assets/talking pic.jpg" />
-    </div>
-    <div class="col-sm-4">
-      <img style="height: 250px;" src="assets/slp-scrabble.jpg" />
-    </div>
-    <div class="col-sm-4">
-      <img class="row-img" src="assets/speech therapy pic.jpg" />
-    </div>
-  </div> -->
 </section>
