--- a/src/app/shared/social-icons/social-icons.component.html
+++ b/src/app/shared/social-icons/social-icons.component.html
@@ -1,5 +1,5 @@
 <div class="social-icons">
-  <img src="assets/facebook.png">
-  <img src="assets/linkedin.png">
-  <img src="assets/twitter.png">
+  <a target="_blank" href="https://www.facebook.com/grow.and.tellSLP/?pnref=lhc"><img src="assets/facebook.png"></a>
+  <a target="_blank" href="https://www.linkedin.com/in/jessica-over-9a697011b?trk=nav_responsive_tab_profile"><img src="assets/linkedin.png"></a>
+  <!-- <img src="assets/twitter.png"> -->
 </div>
