--- a/src/styles.scss
+++ b/src/styles.scss
@@ -319,7 +319,7 @@ section {
   padding: 30px 0 !important;
 }
 
-section h2.section-heading {
+h2.section-heading {
   font-size: 40px;
   margin-top: 0;
   margin-bottom: 15px;
@@ -882,7 +882,7 @@ body {
   height: 100%;
   width: 94%;
   min-height: 600px;
-  min-width: 800px;
+  min-width: 1000px;
   position: absolute;
   padding: 30px 3%;
 }
