grow-tell 2 release 1;

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,4 +1,103 @@
 <gt-container [hasWallpaper]="true">
-    <div id="inner-content" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20px">
+    <div id="inner-content" fxLayout="column" fxLayoutAlign="top center" fxLayoutGap="20px">
+        <iu-accordion class="mat-card blog-entry" [opened]="false">
+            <div class="accordion-trigger">
+                <img src="assets/blog-1.jpg">
+                <div class="right">
+                    <button mat-fab>
+                        <p>Oct</p>
+                        <p class="day">1</p>
+                        <p>2018</p>
+                    </button>
+                    <h4>
+                        <mat-icon>person</mat-icon>
+                        <span class="by">Jessica</span>
+                    </h4>
+                    <h3>
+                        If you’re wondering how Grow & Tell, LLC originated, let me tell you as I introduce myself.
+                    </h3>
+                    <span class="read-more">Read More...</span>
+                    <mat-chip-list>
+                        <mat-chip>General Info</mat-chip>
+                        <mat-chip>To Parents</mat-chip>
+                    </mat-chip-list>
+                </div>
+            </div>
+            <div class="blog-entry-content accordion-content">
+                <p>First, I am so thankful and feel incredibly blessed to be in a position
+                    where you’re reading about this! I hope you find this website a helpful resource for you and your
+                    family.</p>
+                <p>My name is Jessica and I am originally from Halifax, Pennsylvania. I moved to Carlisle, Pennsylvania
+                    when I was in second grade and graduated from Big Spring High School. I started my college career
+                    in
+                    Chambersburg, PA at Penn State Mont Alto but finished my undergraduate degree in Communication
+                    Sciences
+                    and Disorders at Penn State Main Campus in State College, PA. I moved to Pittsburgh, PA to attend
+                    The
+                    University of Pittsburgh for my graduate degree in Speech-Language Pathology.
+                    From living in small rural and suburban communities to experiencing life in and around the city of
+                    Pittsburgh, it became evident that the services for individuals with communication disorders in
+                    Central
+                    Pennsylvania was far behind that of what was available in more urban areas. During grad school I
+                    had
+                    amazing opportunities to work in many clinical settings diagnosing and treating communication
+                    disorders; the DePaul School for the Deaf and Hard of Hearing, University of Pittsburgh Children’s
+                    Hospital, inpatient rehabilitation services at UPMC hospitals, and skilled nursing facilities.
+                    While I
+                    thoroughly enjoyed my work with adult patients, my heart and passion has always resided with
+                    children.
+                    As I’ve always been drawn to working with children, I didn’t necessarily feel that a school setting
+                    was
+                    where I wanted to spend the entirety of my professional career as a Speech-Language Pathologist.
+                    However, after graduation, I moved back to Central, PA and started working for Harrisburg Area City
+                    Schools. Having experienced some childhood hardships I loved putting my energy into the city
+                    schools
+                    and being a person of stability to my students. I married and moved to Carlisle, PA to start a
+                    family,
+                    which led me to moving my professional career to Carlisle Area School District. I love the
+                    environment
+                    Carlisle brings and look forward to raising my children in this amazing town. As a Speech-Language
+                    Pathologist a common question I would always get from families with children with communication
+                    disorders was “where else can I take my child for additional help?” I never had an answer.
+                    So, I started researching and looking for Speech-Language Therapy services in Central Pennsylvania.
+                    I
+                    found Early Intervention, Birth-3 services available through the individual counties, and preschool
+                    age
+                    services, ages 3-5, with the Capital Area Intermediate Unit; and of course, Penn State Hershey
+                    Children’s Hospital. But, overall services for school-age children within the immediate Carlisle
+                    area
+                    was severely limited outside of school programming.
+                </p>
+                <p>My father was an entrepreneur as he started and managed his own business in the roofing and
+                    contracting
+                    industry; so, my underlying drive for business and community development stems from genetics. Being
+                    a
+                    compassionate and goal orientated person, I started researching private practices in the field of
+                    Speech-Language Pathology. I ordered a book to start my own practice and one thing led to another
+                    as I
+                    started seeing a few kids out of my home on weekends. As I became searchable through health
+                    insurance
+                    companies, a client wait list started to form and soon became more than I could manage on my own. I
+                    took a leap of faith and moved my small but growing private practice into Carlisle Pediatric
+                    Associates
+                    in August of 2017, and added a charismatic, compassionate and intelligent Speech-Language
+                    Pathologist,
+                    Julie Gelbaugh to the team. Adding Julie has allowed for continual growth and delivery of research
+                    based and developmentally supported therapy services to individuals and families in the immediate
+                    areas. Julie and I continue striving to make Grow & Tell a thriving place of “growing confidence in
+                    communication!” This fall we have decided to share a full time Speech-Language Pathology position
+                    at
+                    Crestview Elementary School (Carlisle Area School District) and open more availability to clients
+                    and
+                    families at Grow & Tell, LLC. We feel this provides a greater balance of professional
+                    responsibilities,
+                    professional development, family life, and community involvement. We are focused on improving the
+                    lives
+                    of children and their families with communication disorders. We can’t wait to meet you and offer
+                    our
+                    knowledge and skills to your family!
+                </p>
+            </div>
+        </iu-accordion>
     </div>
 </gt-container>
