--- a/src/app/shared/container/container.component.html
+++ b/src/app/shared/container/container.component.html
@@ -1,9 +1,13 @@
-<gt-header [windowWidth]="windowWidth"></gt-header>
+<gt-header [windowWidth]="contentWidth" [offsetLeft]="offsetLeft"></gt-header>
 <!-- <gt-navbar></gt-navbar> -->
-<gt-sidenav [style.height.px]="sidenavHeight"></gt-sidenav>
+<gt-sidenav *ngIf="!mobile" [style.height.px]="sidenavHeight"></gt-sidenav>
 
-<div id="content" class="scrollable" [style.height.px]="windowHeight" [style.width.px]="windowWidth"
+<div id="content" class="scrollable" [style.height.px]="windowHeight" [style.width.px]="contentWidth" [style.left.px]="offsetLeft"
   [style.background-image]="hasBackgroundImage ? 'url(' + backgroundImage + ')' : 'none'">
   <ng-content></ng-content>
-  <iu-wallpaper *ngIf="hasWallpaper" [images]="images" [imageOpacity]="0.6"></iu-wallpaper>
+  <iu-wallpaper *ngIf="hasWallpaper" [images]="images" [imageOpacity]="0.6" [shuffle]="true" [offsetLeft]="offsetLeft"
+    [offsetTop]="64"></iu-wallpaper>
+  <button id="help" mat-fab *ngIf="showHelp" routerLink="/contact">
+    <mat-icon aria-label="Email Us">help</mat-icon>
+  </button>
 </div>
