--- a/src/app/shared/container/container.component.scss
+++ b/src/app/shared/container/container.component.scss
@@ -1,24 +1,56 @@
+@import '~@angular/material/_theming';
 @import '../../../common';
-
 #content {
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  background-attachment: fixed;
-  position: absolute;
-  top: 124px;
-  top: 64px;
-  left: 120px;
-  overflow-y: auto;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
+    position: absolute;
+    top: 124px;
+    top: 64px;
+    left: 120px;
+    overflow-y: auto;
+    z-index: 1;
+    #help {
+        @include mat-elevation(8);
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        background-color: #000;
+        @include silver-hgradient();
+        height: 64px;
+        width: 64px;
+        z-index: 5;
+        mat-icon {
+            @include mat-elevation(16);
+            color: #fff;
+            font-size: 72px;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+        mat-icon:hover {
+            color: $primary-color;
+        }
+    }
+    #help:hover {
+        background-color: #fff;
+        background-color: transparent;
+        background: #000;
+        mat-icon {
+            color: #000;
+            color: $primary-color;
+        }
+    }
 }
 
 gt-sidenav {
-  position: fixed;
-  left: 0;
-  top: -60px;
-  z-index: 2;
+    position: fixed;
+    left: 0;
+    top: -60px;
+    z-index: 2;
 }
 
 iu-wallpaper {
-  display: block;
+    display: block;
 }
