--- a/src/app/shared/email/email.component.html
+++ b/src/app/shared/email/email.component.html
@@ -8,7 +8,7 @@
     <div class="flex">
       <textarea placeholder="Message" rows="1" name="message" id="emailmessage" required></textarea>
     </div>
-    <button>Send</button>
+    <button>Send Email</button>
   </form>
 </div>
 
