--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,6 @@
-<gt-container [hasWallpaper]="false" backgroundImage="assets/bg-contact.jpg">
-    <div id="inner-content" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20px">
+<gt-container [hasWallpaper]="false" [showHelp]="false" backgroundImage="assets/bg-contact.jpg">
+    <div id="inner-content">
         <gt-email></gt-email>
+        <gt-address></gt-address>
     </div>
 </gt-container>
