--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,46 +1,4 @@
-<!-- <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-
-        <div class="navbar-header page-scroll">
-            <img class="logo-icon" src="assets/logo.png" />
-            <a class="navbar-brand page-scroll" routerLink="/home">Grow & Tell SLP, LLC</a>
-            <p class="slp-lbl font-effect-emboss">Speech & Language Pathology</p>
-        </div>
-
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right font-effect-outline">
-                <li>
-                    <a routerLink="/about">About Us</a>
-                </li>
-                <li>
-                    <a routerLink="/contact">Contact Us</a>
-                </li>
-                <li>
-                    <a routerLink="/services">Services</a>
-                </li>
-                <li>
-                    <a routerLink="/blog">Blog</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-
-<header>
-    <div id="header" class="container">
-        <div class="intro-text">
-            <div class="intro-lead-in font-effect-emboss">"Growing Confidence in Communication!"</div>
-            <div class="intro-heading font-effect-3d-float">Welcome!</div>
-            <a href="#services" class="page-scroll btn btn-xl font-effect-outline">Tell Me More</a>
-        </div>
-    </div>
-</header> -->
-
-<mat-toolbar id="header" color="primary" class="mat-elevation-z6" [style.width.px]="windowWidth">
-    <!-- <img id="logo" src="assets/logo.png" routerLink="/"> -->
-    <!-- <a id="banner" class="font-effect-emboss" routerLink="/">Grow & Tell S.L.P.</a> -->
-    <!-- <gt-social-icons></gt-social-icons> -->
-
+<mat-toolbar id="header" color="primary" class="mat-elevation-z6" [style.width.px]="windowWidth" [style.left.px]="offsetLeft">
     <a class="navbar-brand page-scroll" routerLink="/">Grow &amp; Tell SLP, LLC</a>
     <p class="slp-lbl font-effect-emboss">Speech &amp; Language Pathology</p>
     <!-- <div class="intro-lead-in font-effect-emboss">"Growing Confidence in Communication!"</div> -->
